[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spork"
dynamic = ["version"]
description = "Test repo"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9,<3.13"
dependencies = [
]

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "I", "B006"]
lint.ignore = [
    # Whitespace before '{symbol}'
    "E203",
    # Too many leading # before block comment
    "E266",
    # Line too long ({width} > {limit})
    "E501",
    # Ambiguous variable name: {name}
    "E741",
    # Undefined name {name}
    "F821",
    # Do not compare types, use isinstance()
    "E721",
    # Do not assign a lambda expression, use a def
    "E731",
]
extend-exclude = ["tests/", "**/tests/**"]

[tool.ruff.lint.extend-per-file-ignores]
"*/__init__.py" = [
    # unused-import
    "F401",
]

[tool.codespell]
ignore-words-list = "ot,te,raison,fo,lits"
skip = "./docs/build,./.git,*.txt"
